common/force-app/main/default/objects/Knowledge__kav/fields/Banner_Image__c.field-meta.xml
<CustomField>
    <fullName>Banner_Image__c</fullName>
    <description>Banner image file upload for the knowledge article</description>
    <inlineHelpText>Please upload a banner image for this knowledge article</inlineHelpText>
    <label>Banner Image</label>
    <type>File</type>
</CustomField>