common/force-app/main/default/objects/Knowledge__kav/fields/Banner_image_URL__c.field-meta.xml
<CustomField>
    <fullName>Banner_image_URL__c</fullName>
    <description>url for the banner image</description>
    <label>Banner image URL</label>
    <type>Url</type>
</CustomField>