common/force-app/main/default/objects/Knowledge__kav/fields/Course_length__c.field-meta.xml
<CustomField>
    <fullName>Course_length__c</fullName>
    <description>Course length in hours</description>
    <inlineHelpText>Course length in hours</inlineHelpText>
    <label>Course length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>