common/force-app/main/default/objects/Knowledge__kav/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the knowledge article</description>
    <inlineHelpText>Please enter a description of the knowledge article</inlineHelpText>
    <label>Description</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>