common/force-app/main/default/objects/Knowledge__kav/fields/estimatedCompletion__c.field-meta.xml
<CustomField>
    <fullName>estimatedCompletion__c</fullName>
    <label>estimatedCompletion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>