common/force-app/main/default/objects/Knowledge__kav/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <description>Objective of the knowledge article</description>
    <inlineHelpText>Please enter the objective of the knowledge article</inlineHelpText>
    <label>Objective</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>